cmake_minimum_required(VERSION 3.20)
project(C_DataStructure C)

set(CMAKE_C_STANDARD 11)

add_executable(C_DataStructure main.c Practice_Ch2/Ex1.c Practice_Ch2/Ex2.c Practice_Ch2/Ex3.c Practice_Ch2/Ex4.c Practice_Ch2/Ex5.c Practice_Ch2/Ex6.c Practice_Ch2/Ex7.c Practice_Ch2/Ex8.c Practice_Ch2/Ex9.c Practice_Ch2/Ex10.c random.cpp)
