cmake_minimum_required(VERSION 3.20)
project(C_DataStructure C)

set(CMAKE_C_STANDARD 11)

#[[
add_executable(C_DataStructure main.c Practice/Ex1.c Practice/Ex2.c Practice/Ex3.c Practice/Ex4.c Practice/Ex5.c Practice/Ex6.c Practice/Ex7.c Practice/Ex8.c Practice/Ex9.c Practice/Ex10.c)
]]

add_executable(Practice_Ch2_Ex1 Practice/Week2/Ex1.c)
add_executable(Practice_Ch2_Ex2 Practice/Week2/Ex2.c)
add_executable(Practice_Ch2_Ex3 Practice/Week2/Ex3.c)
add_executable(Practice_Ch2_Ex4 Practice/Week2/Ex4.c)
add_executable(Practice_Ch2_Ex5 Practice/Week2/Ex5.c)
add_executable(Practice_Ch2_Ex6 Practice/Week2/Ex6.c)
add_executable(Practice_Ch2_Ex8 Practice/Week2/Ex8.c)
add_executable(Practice_Ch2_Ex7 Practice/Week2/Ex7.c)
add_executable(BookPractice_Ch1_Ex1 BookPractice/Ch1/Ex1.c)
add_executable(BookPractice_Ch3_Ex1 BookPractice/Ch3/Ex1.c)
add_executable(BookPractice_Ch3_Ex2 BookPractice/Ch3/Ex2.c)
add_executable(BookPractice_Ch3_Ex3 BookPractice/Ch3/Ex3.c)
add_executable(BookPractice_Ch3_Ex4 BookPractice/Ch3/Ex4.c)
add_executable(BookPractice_Ch3_Ex5 BookPractice/Ch3/Ex5.c)
add_executable(BookPractice_Ch3_Ex6 BookPractice/Ch3/Ex6.c)
add_executable(BookPractice_Ch3_Ex7 BookPractice/Ch3/Ex7.c)
add_executable(BookPractice_Ch3_Ex8 BookPractice/Ch3/Ex8.c)