cmake_minimum_required(VERSION 3.20)
project(C_DataStructure C)

set(CMAKE_C_STANDARD 11)

#[[
add_executable(C_DataStructure main.c Practice/Ex1.c Practice/Ex2.c Practice/Ex3.c Practice/Ex4.c Practice/Ex5.c Practice/Ex6.c Practice/Ex7.c Practice/Ex8.c Practice/Ex9.c Practice/Ex10.c)
]]

add_executable(Practice_Ch2_Ex1 Practice/Week2/Ex1.c)
add_executable(Practice_Ch2_Ex2 Practice/Week2/Ex2.c)
add_executable(Practice_Ch2_Ex3 Practice/Week2/Ex3.c)
add_executable(Practice_Ch2_Ex4 Practice/Week2/Ex4.c)
add_executable(Practice_Ch2_Ex5 Practice/Week2/Ex5.c)
add_executable(Practice_Ch2_Ex6 Practice/Week2/Ex6.c)
add_executable(Practice_Ch2_Ex8 Practice/Week2/Ex8.c)
add_executable(Practice_Ch2_Ex7 Practice/Week2/Ex7.c)
add_executable(BookPractice_Ch1_Ex1 BookPractice/Ch1/Ex1.c)
add_executable(BookPractice_Ch3_Ex1 BookPractice/Ch3/Ex1.c)
add_executable(BookPractice_Ch3_Ex2 BookPractice/Ch3/Ex2.c)
add_executable(BookPractice_Ch3_Ex3 BookPractice/Ch3/Ex3.c)
add_executable(BookPractice_Ch3_Ex4 BookPractice/Ch3/Ex4.c)
add_executable(BookPractice_Ch3_Ex5 BookPractice/Ch3/Ex5.c)
add_executable(BookPractice_Ch3_Ex6 BookPractice/Ch3/Ex6.c)
add_executable(BookPractice_Ch3_Ex7 BookPractice/Ch3/Ex7.c)
add_executable(BookPractice_Ch3_Ex8 BookPractice/Ch3/Ex8.c)
add_executable(BookPractice_Ch4_Ex1 BookPractice/Ch4/Ex1.c)
add_executable(BookPractice_Ch4_Ex2 BookPractice/Ch4/Ex2.c)
add_executable(Practice_Week3_Maze1 Practice/Week3/Maze_201721164.c)
add_executable(BookPractice_Ch5_Ex1 BookPractice/Ch5/Ex1.c)
add_executable(BookPractice_Ch5_Ex2 BookPractice/Ch5/Ex2.c)
add_executable(BookPractice_Ch5_Ex3 BookPractice/Ch5/Ex3.c)
add_executable(BookPractice_Ch5_Ex4 BookPractice/Ch5/Ex4.c)
add_executable(BookPractice_Ch5_Ex5 BookPractice/Ch5/Ex5.c)
add_executable(Practice_Week4_Ex6 Practice/Week4/Ex6.c)
add_executable(Practice_Week4_Ex7 Practice/Week4/Ex7.c)
add_executable(BookPractice_Ch5_deque BookPractice/Ch5/deque.c)
add_executable(BookPractice_Ch6_Ex1 BookPractice/Ch6/Ex1.c)
add_executable(BookPractice_Ch6_Ex2 BookPractice/Ch6/Ex2.c)
add_executable(BookPractice_Ch6_LabEx1 BookPractice/Ch6/LabEx1.c)
add_executable(BookPractice_Ch6_LabEx2 BookPractice/Ch6/LabEx2.c)
add_executable(BookPractice_Ch6_LabEx3 BookPractice/Ch6/LabEx3.c)
add_executable(BookPractice_Ch6_LabEx4 BookPractice/Ch6/LabEx4.c)
add_executable(Practice_Week5_Ex1 Practice/Week5/Ex1.c)
add_executable(Practice_Week5_Ex2 Practice/Week5/Ex2.c)
add_executable(Practice_Week5_Ex3 Practice/Week5/Ex3.c)
add_executable(Practice_Week5_Ex4 Practice/Week5/Ex4.c)